# 7zip

./: .gitignore  ADVERSARIAL_REVIEW.md  ADVERSARIAL_REVIEW_REPORT.md  ADVERSARIAL_REVIEW_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  COMPATIBILITY_ANALYSIS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_GUIDE_OLD.md  IMPLEMENTATION_SUMMARY.md  MULTI_VOLUME_ANALYSIS.md  PERFORMANCE_INVESTIGATION_REPORT.md  README.md
.github/workflows/: README.md  build-release.yml  ci.yml
CPP/7zip/: IParallelCompress.h
CPP/7zip/Common/: CoderGuids.cpp
CPP/7zip/Compress/: 7Z_INTEGRATION.md  AZURE_INTEGRATION.md  CodeValidation.sh  E2E_TEST_DOCUMENTATION.md  FEATURE_SUMMARY.md  PARALLEL_COMPRESSION.md  Parallel7zOut.cpp  Parallel7zOut.h  ParallelCompress.def  ParallelCompressAPI.cpp  ParallelCompressAPI.h  ParallelCompressExample.cpp  ParallelCompressor.cpp  ParallelCompressor.h  ParallelCompressorRegister.cpp  ParallelCompressorTest.cpp  ParallelCompressorValidation.cpp  ParallelE2ETest.cpp  ParallelFeatureParityTest.cpp  ParallelIntegrationTest.cpp  ParallelSecurityTest.cpp  ParallelSolidMultiVolumeTest.cpp  SimpleTest  SimpleTest.cpp  TEST_EXECUTION_REPORT.md  TEST_README.md  makefile.test  run_tests.sh
DOC/: AZURE_INTEGRATION.md  BUILD_SYSTEM.md  CROSS_PLATFORM_STRATEGY.md  DEVELOPER_GUIDE.md  INVESTIGATION_REPORT.md  README.md  RELEASE_MANAGEMENT.md
cmake/: 7zip-parallelConfig.cmake.in
examples/: CloudStorageExample.c
